--- a/index.html
+++ b/index.html
@@ -47,5 +47,10 @@
     </div>
 
     <script src="scripts.js"></script>
+    <script
+      data-ad-client="ca-pub-1853143277472405"
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+    ></script>
   </body>
 </html>
